spawning + boss fixes